--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Ferreteria | Index</title>
 </head>
 <body>
-    <h1>Hola </h1>
+    <h1>Hola Soy una etiqueta</h1>
     
 </body>
 </html>
