--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
           <ul class="u-nav u-unstyled u-nav-1">
             <li class="u-nav-item"><a
                 class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
-                href="Casa.html" style="padding: 10px 20px;">Inicio</a>
+                href="index.html" style="padding: 10px 20px;">Inicio</a>
             </li>
             <li class="u-nav-item"><a
               class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
-              href="Contacto.html" style="padding: 10px 20px;">Productos</a>
+              href="products.html" style="padding: 10px 20px;">Productos</a>
           </li>
             <li class="u-nav-item"><a
                 class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
@@ -79,19 +79,20 @@
             <div class="u-inner-container-layout u-sidenav-overflow">
               <div class="u-menu-close"></div>
               <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2">
-                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Casa.html">Inicio</a>
+                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="index.html">Inicio</a>
                 </li>
-                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Página-1.html">Productos</a>
+                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="products.html">Productos</a>
                 </li>
                 <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Acerca-de.html">Acerca de</a>
                 </li>
-                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Contacto.html">Contacto</a>
+                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Página-1.html">Contacto</a>
                 </li>
               </ul>
             </div>
           </div>
           <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
         </div>
+        
       </nav>
     </div>
   </header>
