--- a/products.html
+++ b/products.html
@@ -56,35 +56,36 @@
           <ul class="u-nav u-unstyled u-nav-1">
             <li class="u-nav-item"><a
                 class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
-                href="Casa.html" style="padding: 10px 20px;">Inicio</a>
+                href="index.html" style="padding: 10px 20px;">Inicio</a>
             </li>
             <li class="u-nav-item"><a
-                class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
-                href="Contacto.html" style="padding: 10px 20px;">Productos</a>
-            </li>
+              class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
+              href="products.html" style="padding: 10px 20px;">Productos</a>
+          </li>
             <li class="u-nav-item"><a
                 class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
                 href="Acerca-de.html" style="padding: 10px 20px;">Acerca de</a>
             </li>
             <li class="u-nav-item"><a
-                class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
-                href="Página-1.html" style="padding: 10px 20px;">Contacto</a>
-            </li>
-
+              class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
+              href="Página-1.html" style="padding: 10px 20px;">Contacto</a>
+           </li>
+            
           </ul>
         </div>
+
         <div class="u-nav-container-collapse">
           <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
             <div class="u-inner-container-layout u-sidenav-overflow">
               <div class="u-menu-close"></div>
               <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2">
-                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Casa.html">Inicio</a>
+                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="index.html">Inicio</a>
                 </li>
-                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Página-1.html">Productos</a>
+                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="products.html">Productos</a>
                 </li>
                 <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Acerca-de.html">Acerca de</a>
                 </li>
-                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Contacto.html">Contacto</a>
+                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Página-1.html">Contacto</a>
                 </li>
               </ul>
             </div>
