Agregando estilo al titulo al verlo en dispositivo

--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
 </head>
 
 <body data-home-page="Casa.html" data-home-page-title="Casa" class="u-body u-xl-mode" data-lang="es">
+  <style>
+    @media screen and (min-width: 900px){
+      .h2{
+        background-color: white;
+      }
+      
+    }
+  </style>
   <header class="u-clearfix u-header u-header" id="sec-2e66">
     <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
       <a href="https://nicepage.com" class="u-image u-logo u-image-1">
@@ -101,8 +109,8 @@
       data-image-height="1132">
       <div
         class="u-container-layout u-valign-top-lg u-valign-top-md u-valign-top-sm u-valign-top-xl u-container-layout-1">
-        <h2 class="u-align-center u-text u-text-body-color u-text-default u-text-1"
-          data-animation-name="customAnimationIn" data-animation-duration="1500">Nuestros Servicios de Reparacion</h2>
+        <h2 class="u-align-center u-text u-text-default u-text-1" data-animation-name="customAnimationIn" 
+        data-animation-duration="1500" style="-webkit-text-stroke: 1px rgb(255, 255, 255);">Nuestros Servicios de Reparacion</h2>
       </div>
     </div>
     <div class="u-list u-list-1">
