--- a/products.html
+++ b/products.html
@@ -59,18 +59,18 @@
                 href="index.html" style="padding: 10px 20px;">Inicio</a>
             </li>
             <li class="u-nav-item"><a
-              class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
-              href="products.html" style="padding: 10px 20px;">Productos</a>
-          </li>
+                class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
+                href="products.html" style="padding: 10px 20px;">Productos</a>
+            </li>
             <li class="u-nav-item"><a
                 class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
                 href="Acerca-de.html" style="padding: 10px 20px;">Acerca de</a>
             </li>
             <li class="u-nav-item"><a
-              class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
-              href="Página-1.html" style="padding: 10px 20px;">Contacto</a>
-           </li>
-            
+                class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
+                href="Página-1.html" style="padding: 10px 20px;">Contacto</a>
+            </li>
+
           </ul>
         </div>
 
@@ -373,7 +373,7 @@
           </div>
         </div>
       </div><button class="u-dialog-close-button u-icon u-text-grey-40 u-icon-1"><svg class="u-svg-link"
-          preserveAspectRatio="xMidYMin slice" viewBox="0 0 16 16" style="">
+          preserveAspectRatio="xMidYMin slice" viewBox="0 0 16 16">
           <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-efe9"></use>
         </svg><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"
           xml:space="preserve" class="u-svg-content" viewBox="0 0 16 16" x="0px" y="0px" id="svg-efe9">
