Agregando Logo y agregando funcionalidades

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <header class="u-clearfix u-header u-header" id="sec-2e66">
     <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
       <a href="https://nicepage.com" class="u-image u-logo u-image-1">
-        <img src="images/default-logo.png" class="u-logo-image u-logo-image-1">
+        <img src="images/logo-empresa.png" class="u-logo-image u-logo-image-1">
       </a>
       <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
         <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
@@ -81,7 +81,6 @@
             
           </ul>
         </div>
-
         <div class="u-nav-container-collapse">
           <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
             <div class="u-inner-container-layout u-sidenav-overflow">
@@ -122,11 +121,8 @@
             <img class="u-expanded-width u-image u-image-default u-image-2" src="images/22.jpg" alt=""
               data-image-width="1380" data-image-height="920" data-animation-name="customAnimationIn"
               data-animation-duration="1500" data-animation-delay="500">
-            <h4 class="u-align-center u-text u-text-2">Kitchen Repair</h4>
-            <p class="u-align-center u-text u-text-3"> Nulla aliquet enim tortor at. Sed lectus vestibulum mattis
-              ullamcorper velit sed ullamcorper. Massa tincidunt dui ut ornare. Enim sed faucibus. </p>
-            <a href="https://nicepage.com/k/radio-website-templates"
-              class="u-border-1 u-border-active-black u-border-hover-black u-border-no-left u-border-no-right u-border-no-top u-border-palette-3-base u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-button-style u-none u-radius-0 u-text-active-black u-text-body-color u-text-hover-black u-top-left-radius-0 u-top-right-radius-0 u-btn-1">more</a>
+            <h4 class="u-align-center u-text u-text-2">Cerrajería</h4>
+            <p class="u-align-center u-text u-text-3">Seguridad garantizada. Apertura y instalación de cerraduras. Tu tranquilidad es nuestro compromiso. Confía en nosotros para protegerte.</p>
           </div>
         </div>
         <div
@@ -139,8 +135,6 @@
             <h4 class="u-align-center u-text u-text-4"> Countertop Repair</h4>
             <p class="u-align-center u-text u-text-5"> Nulla aliquet enim tortor at. Sed lectus vestibulum mattis
               ullamcorper velit sed ullamcorper. Massa tincidunt dui ut ornare. Enim sed faucibus. </p>
-            <a href="https://nicepage.com/c/text-website-templates"
-              class="u-border-1 u-border-active-black u-border-hover-black u-border-no-left u-border-no-right u-border-no-top u-border-palette-3-base u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-button-style u-none u-radius-0 u-text-active-black u-text-body-color u-text-hover-black u-top-left-radius-0 u-top-right-radius-0 u-btn-2">more</a>
           </div>
         </div>
         <div
@@ -153,8 +147,6 @@
             <h4 class="u-align-center u-text u-text-6"> Painting Repair</h4>
             <p class="u-align-center u-text u-text-7"> Nulla aliquet enim tortor at. Sed lectus vestibulum mattis
               ullamcorper velit sed ullamcorper. Massa tincidunt dui ut ornare. Enim sed faucibus. </p>
-            <a href="https://nicepage.app"
-              class="u-border-1 u-border-active-black u-border-hover-black u-border-no-left u-border-no-right u-border-no-top u-border-palette-3-base u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-button-style u-none u-radius-0 u-text-active-black u-text-body-color u-text-hover-black u-top-left-radius-0 u-top-right-radius-0 u-btn-3">more</a>
           </div>
         </div>
         <div
@@ -167,9 +159,7 @@
             <h4 class="u-align-center u-text u-text-8">Wall Repair</h4>
             <p class="u-align-center u-text u-text-9"> Nulla aliquet enim tortor at. Sed lectus vestibulum mattis
               ullamcorper velit sed ullamcorper. Massa tincidunt dui ut ornare. Enim sed faucibus. </p>
-            <a href="https://nicepage.cc"
-              class="u-border-1 u-border-active-black u-border-hover-black u-border-no-left u-border-no-right u-border-no-top u-border-palette-3-base u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-button-style u-none u-radius-0 u-text-active-black u-text-body-color u-text-hover-black u-top-left-radius-0 u-top-right-radius-0 u-btn-4">more</a>
-          </div>
+           </div>
         </div>
         <div
           class="u-container-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle u-video-cover u-white u-list-item-5"
@@ -181,8 +171,6 @@
             <h4 class="u-align-center u-text u-text-10"> Flooring Repair</h4>
             <p class="u-align-center u-text u-text-11"> Nulla aliquet enim tortor at. Sed lectus vestibulum mattis
               ullamcorper velit sed ullamcorper. Massa tincidunt dui ut ornare. Enim sed faucibus. </p>
-            <a href="https://nicepage.com/joomla-templates"
-              class="u-border-1 u-border-active-black u-border-hover-black u-border-no-left u-border-no-right u-border-no-top u-border-palette-3-base u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-button-style u-none u-radius-0 u-text-active-black u-text-body-color u-text-hover-black u-top-left-radius-0 u-top-right-radius-0 u-btn-5">more</a>
           </div>
         </div>
         <div
@@ -195,8 +183,6 @@
             <h4 class="u-align-center u-text u-text-12"> Electrical Repair</h4>
             <p class="u-align-center u-text u-text-13"> Nulla aliquet enim tortor at. Sed lectus vestibulum mattis
               ullamcorper velit sed ullamcorper. Massa tincidunt dui ut ornare. Enim sed faucibus. </p>
-            <a href="https://nicepage.best"
-              class="u-border-1 u-border-active-black u-border-hover-black u-border-no-left u-border-no-right u-border-no-top u-border-palette-3-base u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-button-style u-none u-radius-0 u-text-active-black u-text-body-color u-text-hover-black u-top-left-radius-0 u-top-right-radius-0 u-btn-6">more</a>
           </div>
         </div>
         <div
@@ -209,8 +195,6 @@
             <h4 class="u-align-center u-text u-text-14"> Plumbing Repair</h4>
             <p class="u-align-center u-text u-text-15"> Nulla aliquet enim tortor at. Sed lectus vestibulum mattis
               ullamcorper velit sed ullamcorper. Massa tincidunt dui ut ornare. Enim sed faucibus. </p>
-            <a href="https://nicepage.cloud"
-              class="u-border-1 u-border-active-black u-border-hover-black u-border-no-left u-border-no-right u-border-no-top u-border-palette-3-base u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-button-style u-none u-radius-0 u-text-active-black u-text-body-color u-text-hover-black u-top-left-radius-0 u-top-right-radius-0 u-btn-7">more</a>
           </div>
         </div>
         <div
@@ -223,8 +207,6 @@
             <h4 class="u-align-center u-text u-text-16">General Handyman</h4>
             <p class="u-align-center u-text u-text-17"> Nulla aliquet enim tortor at. Sed lectus vestibulum mattis
               ullamcorper velit sed ullamcorper. Massa tincidunt dui ut ornare. Enim sed faucibus. </p>
-            <a href="https://nicepage.com/k/children-website-templates"
-              class="u-border-1 u-border-active-black u-border-hover-black u-border-no-left u-border-no-right u-border-no-top u-border-palette-3-base u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-button-style u-none u-radius-0 u-text-active-black u-text-body-color u-text-hover-black u-top-left-radius-0 u-top-right-radius-0 u-btn-8">more</a>
           </div>
         </div>
         <div
@@ -237,31 +219,29 @@
             <h4 class="u-align-center u-text u-text-18"> Cleaning</h4>
             <p class="u-align-center u-text u-text-19"> Nulla aliquet enim tortor at. Sed lectus vestibulum mattis
               ullamcorper velit sed ullamcorper. Massa tincidunt dui ut ornare. Enim sed faucibus. </p>
-            <a href="https://nicepage.studio"
-              class="u-border-1 u-border-active-black u-border-hover-black u-border-no-left u-border-no-right u-border-no-top u-border-palette-3-base u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-button-style u-none u-radius-0 u-text-active-black u-text-body-color u-text-hover-black u-top-left-radius-0 u-top-right-radius-0 u-btn-9">more</a>
+          </div>
+        </div>
+        <div
+          class="u-container-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle u-video-cover u-white u-list-item-9"
+          data-animation-name="customAnimationIn" data-animation-duration="1500">
+          <div class="u-container-layout u-similar-container u-container-layout-10">
+            <img class="u-expanded-width u-image u-image-default u-image-10" src="images/654.jpg" alt=""
+              data-image-width="1010" data-image-height="864" data-animation-name="customAnimationIn"
+              data-animation-duration="1500" data-animation-delay="500">
+            <h4 class="u-align-center u-text u-text-18"> Cleaning</h4>
+            <p class="u-align-center u-text u-text-19"> Nulla aliquet enim tortor at. Sed lectus vestibulum mattis
+              ullamcorper velit sed ullamcorper. Massa tincidunt dui ut ornare. Enim sed faucibus. </p>
           </div>
         </div>
       </div>
     </div>
   </section>
-  <section class="u-clearfix u-section-3" id="sec-6114">
-    <div class="u-clearfix u-sheet u-sheet-1"></div>
-  </section>
-  <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-0cfc">
-    <div class="u-clearfix u-sheet u-sheet-1">
-      <p class="u-small-text u-text u-text-variant u-text-1">Texto de muestra. Haz click para seleccionar el elemento de
-        Texto.</p>
-    </div>
-  </footer>
   <section class="u-backlink u-clearfix u-grey-80">
-    <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
-      <span>Website Templates</span>
-    </a>
     <p class="u-text">
-      <span>created with</span>
+      <span>Copyright © 2023 Cerrajería todo abrimos - Todos los derechos reservados.</span>
     </p>
     <a class="u-link" href="" target="_blank">
-      <span>Website Builder Software</span>
+      <span>Terminos y Condiciones</span>
     </a>.
   </section>
 </body>
