Agregando Servicios en Index

--- a/index.html
+++ b/index.html
@@ -124,57 +124,52 @@
             <img class="u-expanded-width u-image u-image-default u-image-3" src="images/436.jpg" alt=""
               data-image-width="1380" data-image-height="918" data-animation-name="customAnimationIn"
               data-animation-duration="1500" data-animation-delay="500">
-            <h4 class="u-align-center u-text u-text-4"> Countertop Repair</h4>
-            <p class="u-align-center u-text u-text-5"> Nulla aliquet enim tortor at. Sed lectus vestibulum mattis
-              ullamcorper velit sed ullamcorper. Massa tincidunt dui ut ornare. Enim sed faucibus. </p>
+            <h4 class="u-align-center u-text u-text-4">Apertura de vehiculos</h4>
+            <p class="u-align-center u-text u-text-5">Acceso rápido a tu vehículo. Expertos en apertura de autos. Recupera la movilidad con nuestra ayuda confiable.</p>
           </div>
         </div>
         <div
           class="u-container-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle u-video-cover u-white u-list-item-3"
           data-animation-name="customAnimationIn" data-animation-duration="1500">
           <div class="u-container-layout u-similar-container u-container-layout-4">
-            <img class="u-expanded-width u-image u-image-default u-image-4" src="images/erer.jpg" alt=""
+            <img class="u-expanded-width u-image u-image-default u-image-4" src="images/4562.jpg" alt=""
               data-image-width="700" data-image-height="593" data-animation-name="customAnimationIn"
               data-animation-duration="1500" data-animation-delay="500">
-            <h4 class="u-align-center u-text u-text-6"> Painting Repair</h4>
-            <p class="u-align-center u-text u-text-7"> Nulla aliquet enim tortor at. Sed lectus vestibulum mattis
-              ullamcorper velit sed ullamcorper. Massa tincidunt dui ut ornare. Enim sed faucibus. </p>
+            <h4 class="u-align-center u-text u-text-6">Plomeria</h4>
+            <p class="u-align-center u-text u-text-7">"Instalamos tuberías en tu hogar sin problemas. Expertos en plomería para asegurar tu comodidad y funcionamiento sin fugas."</p>
           </div>
         </div>
         <div
           class="u-container-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle u-video-cover u-white u-list-item-4"
           data-animation-name="customAnimationIn" data-animation-duration="1500">
           <div class="u-container-layout u-similar-container u-container-layout-5">
-            <img class="u-expanded-width u-image u-image-default u-image-5" src="images/422.jpg" alt=""
+            <img class="u-expanded-width u-image u-image-default u-image-5" src="images/7883.jpg" alt=""
               data-image-width="800" data-image-height="636" data-animation-name="customAnimationIn"
               data-animation-duration="1500" data-animation-delay="500">
-            <h4 class="u-align-center u-text u-text-8">Wall Repair</h4>
-            <p class="u-align-center u-text u-text-9"> Nulla aliquet enim tortor at. Sed lectus vestibulum mattis
-              ullamcorper velit sed ullamcorper. Massa tincidunt dui ut ornare. Enim sed faucibus. </p>
+            <h4 class="u-align-center u-text u-text-8">Instalaciones electricas</h4>
+            <p class="u-align-center u-text u-text-9">Potenciamos tu hogar con instalaciones eléctricas seguras y eficientes. Iluminamos tu vida con experticia y confiabilidad.</p>
            </div>
         </div>
         <div
           class="u-container-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle u-video-cover u-white u-list-item-5"
           data-animation-name="customAnimationIn" data-animation-duration="1500">
           <div class="u-container-layout u-similar-container u-container-layout-6">
-            <img class="u-expanded-width u-image u-image-default u-image-6" src="images/r3.jpg" alt=""
+            <img class="u-expanded-width u-image u-image-default u-image-6" src="images/erer.jpg" alt=""
               data-image-width="800" data-image-height="636" data-animation-name="customAnimationIn"
               data-animation-duration="1500" data-animation-delay="500">
-            <h4 class="u-align-center u-text u-text-10"> Flooring Repair</h4>
-            <p class="u-align-center u-text u-text-11"> Nulla aliquet enim tortor at. Sed lectus vestibulum mattis
-              ullamcorper velit sed ullamcorper. Massa tincidunt dui ut ornare. Enim sed faucibus. </p>
+            <h4 class="u-align-center u-text u-text-10">Pinturia</h4>
+            <p class="u-align-center u-text u-text-11">Transformamos espacios con pinceladas de creatividad. Pintura de paredes que refleja tu estilo. Tu lienzo perfecto, nuestro compromiso.</p>
           </div>
         </div>
         <div
           class="u-container-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle u-video-cover u-white u-list-item-6"
           data-animation-name="customAnimationIn" data-animation-duration="1500">
           <div class="u-container-layout u-similar-container u-container-layout-7">
-            <img class="u-expanded-width u-image u-image-default u-image-7" src="images/7883.jpg" alt=""
+            <img class="u-expanded-width u-image u-image-default u-image-7" src="images/r3.jpg" alt=""
               data-image-width="800" data-image-height="636" data-animation-name="customAnimationIn"
               data-animation-duration="1500" data-animation-delay="500">
-            <h4 class="u-align-center u-text u-text-12"> Electrical Repair</h4>
-            <p class="u-align-center u-text u-text-13"> Nulla aliquet enim tortor at. Sed lectus vestibulum mattis
-              ullamcorper velit sed ullamcorper. Massa tincidunt dui ut ornare. Enim sed faucibus. </p>
+            <h4 class="u-align-center u-text u-text-12">Carpinteria</h4>
+            <p class="u-align-center u-text u-text-13">Creando sueños en madera. Expertos en carpintería que dan vida a tus ideas. Tu hogar, a medida y encanto.</p>
           </div>
         </div>
         <div
@@ -184,11 +179,11 @@
             <img class="u-expanded-width u-image u-image-default u-image-8" src="images/4562.jpg" alt=""
               data-image-width="800" data-image-height="636" data-animation-name="customAnimationIn"
               data-animation-duration="1500" data-animation-delay="500">
-            <h4 class="u-align-center u-text u-text-14"> Plumbing Repair</h4>
-            <p class="u-align-center u-text u-text-15"> Nulla aliquet enim tortor at. Sed lectus vestibulum mattis
-              ullamcorper velit sed ullamcorper. Massa tincidunt dui ut ornare. Enim sed faucibus. </p>
+            <h4 class="u-align-center u-text u-text-14">Mas servicios</h4>
+            <p class="u-align-center u-text u-text-15">En construccion</p>
           </div>
         </div>
+        <!--
         <div
           class="u-container-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle u-video-cover u-white u-list-item-8"
           data-animation-name="customAnimationIn" data-animation-duration="1500">
@@ -225,6 +220,7 @@
               ullamcorper velit sed ullamcorper. Massa tincidunt dui ut ornare. Enim sed faucibus. </p>
           </div>
         </div>
+        -->
       </div>
     </div>
   </section>
