--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="keywords" content="Home Repair Services, INTUITIVE">
   <meta name="description" content="">
-  <title>Casa</title>
+  <title>Inicio</title>
   <link rel="stylesheet" href="nicepage.css" media="screen">
   <link rel="stylesheet" href="Casa.css" media="screen">
   <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
